# 2D-engine

./: .gitignore  CMakeLists.txt  PlatformLinux.cpp  PlatformWin32.cpp  README.md  Tiny2D.sln  Tiny2D.vcxproj  Tiny2D.vcxproj.filters
src/: Engine.cpp  Engine.h  Game.cpp  main.cpp
